# tp-taller3

./: .gitignore  README.md  run.sh  tp
front/: Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  index.html  package.json  run  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
front/public/: manifest.json
front/src/: App.tsx  index.css  index.tsx  uiRoutes.json
front/src/hooks/: uploadToS3.ts  useAuth.ts  useQuery.ts
front/src/types/: auth.d.ts  props.ts
front/utils/: formatDate.ts
mascotas/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
mascotas/docs/: docs.go  swagger.json  swagger.yaml
mascotas/src/config/: log.go  vars.go
mascotas/src/controller/: dto.go  errors.go  pet_controller.go  (+4 more)
notificaciones/: Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
notificaciones/docs/: docs.go  swagger.json  swagger.yaml
telegram/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  go.mod  go.sum  main.go
tratamientos/: .gitignore  Dockerfile.dev  Dockerfile.prod  LICENSE  README.md  docker-compose.yml  go.mod  go.sum  main.go
tratamientos/docs/: docs.go  swagger.json  swagger.yaml
usuarios/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
usuarios/app/api/: app.py
usuarios/app/auth/: auth_bearer.py  auth_handler.py
usuarios/app/crud/: base.py  users.py
usuarios/app/db/: base.py  base_class.py  database.py
usuarios/app/models/: users.py  utils.py
usuarios/app/routes/: user.py
usuarios/app/schemas/: users.py
(+150 files in other folders)
